# cmake_stm_example

./: .clang-format  .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  circular_buffer.c  cmake_arm_none_eabi.cmake  main.c  main.cpp  setup.sh  slope_of_line.py
drivers/cmsis/arm/: core_cm7.h
drivers/cmsis/device/: stm32f7xx.h
drivers/hal/inc/: stm32f7xx_hal.h  stm32f7xx_hal_adc_ex.h  stm32f7xx_hal_i2c.h  stm32f7xx_hal_rcc.h
drivers/hal/src/: stm32f7xx_hal_rcc.c  stm32f7xx_hal_tim.c  stm32f7xx_hal_tim_ex.c
inc/: FreeRTOSConfig.h  adc.h  board_config.h  defines.h  error_handling.h  globals.h  i2c.h  i2c.hpp  imu.hpp  main.h  port.h  pwm.hpp  stm32f7xx_hal_conf.h  stm32f7xx_it.h  stm32f7xx_nucleo_144_BSP.h  usart.h
j-link/: flash.jlink
ldscripts/: gcc.ld  nokeep.ld
middleware/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1/: port.c
openocd/: st_nucleo_f7.cfg
python/: read_serial_data.py
src/: adc.c  board_config.c  error_handling.c  globals.c  i2c.c  i2c.cpp  imu.cpp  main.cpp  port.c  pwm.cpp  retarget.c  stm32f7xx_it.c  system_stm32f7xx.c  usart.c
startup/: startup_ARMCM7.S
test/: CMakeLists.txt  CTestTestfile.cmake  cmake_gcc.cmake
test/unit/: ExampleTests.cpp  imu_test.cpp
tests/: first_test.cpp  main.cpp
tests/mocks/inc/: stm32f7xx_hal.h
tests/mocks/src/: i2c.cpp
tests/results/: coverage.html
tests/stubs/inc/: stm32f7xx_hal.h
tests/stubs/src/: i2c.cpp
tests/unit/: imu_test.cpp
